--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://iaslavnov.github.io/todo-react",
+  "homepage": "https://iaslavnov.github.io/todo-react/",
   "name": "todo-react",
   "version": "0.1.0",
   "private": true,
